Added 3-th screens desktop

--- a/index.html
+++ b/index.html
@@ -6,10 +6,294 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Куртки</title>
+
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,800&display=swap&subset=cyrillic"
+		rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Oswald:400,500,600,700&display=swap&subset=cyrillic"
+		rel="stylesheet">
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
+
+	<header class="header">
+		<div class="container">
+			<div class="header__wrap">
+				<div class="header__contacts">
+					<div class="header__logo">
+						<img src="img/logo.png" alt="logo">
+					</div>
+					<div class="header__adr">
+						<div class="header__adr-icon">
+							<img src="img/map.svg" alt="localized">
+						</div>
+						<div class="header__adr-text">
+							<p>
+								Москва, ул. Название улицы 10
+							</p>
+							<a href="#">найти на карте</a>
+						</div>
+					</div>
+					<div class="header__call">
+						<div class="header__call-icon">
+							<img src="img/phone.svg" alt="phone">
+						</div>
+						<div class="header__call-tel">
+							<p>
+								8 (965) 0-333-222
+							</p>
+							<a href="#">заказать звонок</a>
+						</div>
+					</div>
+				</div>
+				<!-- /.header__contacts -->
+				<div class="header__search">
+					<div class="header__search-input">
+						<input type="search" name="search" id="search" placeholder="Поиск по товарам">
+						<img src="img/search.svg" alt="search">
+					</div>
+					<div class="header__bookmarks">
+						<img src="img/heart.svg" alt="bookmarks">
+					</div>
+					<div class="header__cart">
+						<img src="img/supermarket.svg" alt="basket">
+					</div>
+				</div>
+				<!-- /.header__search -->
+			</div>
+			<!-- /.header__wrap -->
+			<nav class="header-nav">
+				<a href="#">ЖЕНЩИНАМ</a>
+				<a href="#">МУЖЧИНАМ</a>
+				<a href="#">НОВЫЕ КОЛЛЕКЦИИ</a>
+				<a href="#">РАСПРОДАЖА</a>
+				<a href="#">БРЕНДЫ</a>
+				<a href="#">ОПЛАТА И ДОСТАВКА</a>
+				<a href="#">КОНТАКТЫ</a>
+			</nav>
+			<!-- /.header-nav -->
+		</div>
+		<!-- /.container -->
+	</header>
+	<!-- /.header -->
+
+	<div class="container">
+		<div class="slider-top">
+
+			<div class="slider-top__item">
+				<img src="img/slide-bg.jpg" alt="">
+				<div class="slider-top__item-text">
+					<h1>Зимняя распродажа</h1>
+					<p>на женские и мужские коллеции</p>
+					<span>-25%</span>
+					<div class="slider-top__link">
+						<a href="#">в каталог &#62;</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="slider-top__item">
+				<img src="img/slide-bg.jpg" alt="">
+				<div class="slider-top__item-text">
+					<h1>Зимняя распродажа</h1>
+					<p>на женские и мужские коллеции</p>
+					<span>-25%</span>
+					<div class="slider-top__link">
+						<a href="#">в каталог &#62;</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="slider-top__item">
+				<img src="img/slide-bg.jpg" alt="">
+				<div class="slider-top__item-text">
+					<h1>Зимняя распродажа</h1>
+					<p>на женские и мужские коллеции</p>
+					<span>-25%</span>
+					<div class="slider-top__link">
+						<a href="#">в каталог &#62;</a>
+					</div>
+				</div>
+			</div>
+
+		</div>
+		<!-- /.slider-top -->
+
+
+		<div class="slider-brand">
+
+			<div class="slider-brand__item">
+				<div class="slider-brand__img">
+					<img src="img/brand-1.png" alt="brand">
+				</div>
+			</div>
+
+			<div class="slider-brand__item">
+				<div class="slider-brand__img">
+					<img src="img/brand-2.png" alt="brand">
+				</div>
+			</div>
+
+			<div class="slider-brand__item">
+				<div class="slider-brand__img">
+					<img src="img/brand-3.png" alt="brand">
+				</div>
+			</div>
+
+			<div class="slider-brand__item">
+				<div class="slider-brand__img">
+					<img src="img/brand-4.png" alt="brand">
+				</div>
+			</div>
+
+			<div class="slider-brand__item">
+				<div class="slider-brand__img">
+					<img src="img/brand-5.png" alt="brand">
+				</div>
+			</div>
+
+			<div class="slider-brand__item">
+				<div class="slider-brand__img">
+					<img src="img/brand-6.png" alt="brand">
+				</div>
+			</div>
+
+			<div class="slider-brand__item">
+				<div class="slider-brand__img">
+					<img src="img/brand-7.png" alt="brand">
+				</div>
+			</div>
+
+			<div class="slider-brand__item">
+				<div class="slider-brand__img">
+					<img src="img/brand-1.png" alt="brand">
+				</div>
+			</div>
+
+			<div class="slider-brand__item">
+				<div class="slider-brand__img">
+					<img src="img/brand-2.png" alt="brand">
+				</div>
+			</div>
+
+			<div class="slider-brand__item">
+				<div class="slider-brand__img">
+					<img src="img/brand-3.png" alt="brand">
+				</div>
+			</div>
+
+			<div class="slider-brand__item">
+				<div class="slider-brand__img">
+					<img src="img/brand-4.png" alt="brand">
+				</div>
+			</div>
+
+			<div class="slider-brand__item">
+				<div class="slider-brand__img">
+					<img src="img/brand-5.png" alt="brand">
+				</div>
+			</div>
+
+			<div class="slider-brand__item">
+				<div class="slider-brand__img">
+					<img src="img/brand-6.png" alt="brand">
+				</div>
+			</div>
+
+			<div class="slider-brand__item">
+				<div class="slider-brand__img">
+					<img src="img/brand-7.png" alt="brand">
+				</div>
+			</div>
+
+		</div>
+		<!-- /.slider-brand -->
+
+
+		<div class="slider-news">
+
+			<h2>Новинки</h2>
+
+			<div class="slider-new">
+
+				<div class="slider-new__item">
+					<div class="slider-new__card">
+						<img src="img/new-1.png" alt="">
+						<p>Куртка утепленная Aeronautica Militare</p>
+						<span>26 250 ₽</span>
+					</div>
+				</div>
+
+				<div class="slider-new__item">
+					<div class="slider-new__card">
+						<img src="img/new-2.png" alt="">
+						<p>Куртка barbour</p>
+						<span>20 150 ₽</span>
+					</div>
+				</div>
+
+				<div class="slider-new__item">
+					<div class="slider-new__card">
+						<img src="img/new-3.png" alt="">
+						<p>Куртка emporio armani ea7</p>
+						<span>18 850 ₽</span>
+					</div>
+				</div>
+
+				<div class="slider-new__item">
+					<div class="slider-new__card">
+						<img src="img/new-4.png" alt="">
+						<p>Куртка кожаная Parajumpers</p>
+						<span>14 500 ₽</span>
+					</div>
+				</div>
+
+				<div class="slider-new__item">
+					<div class="slider-new__card">
+						<img src="img/new-1.png" alt="">
+						<p>Куртка утепленная Aeronautica Militare</p>
+						<span>26 250 ₽</span>
+					</div>
+				</div>
+
+				<div class="slider-new__item">
+					<div class="slider-new__card">
+						<img src="img/new-2.png" alt="">
+						<p>Куртка barbour</p>
+						<span>20 150 ₽</span>
+					</div>
+				</div>
+
+				<div class="slider-new__item">
+					<div class="slider-new__card">
+						<img src="img/new-3.png" alt="">
+						<p>Куртка emporio armani ea7</p>
+						<span>18 850 ₽</span>
+					</div>
+				</div>
+
+				<div class="slider-new__item">
+					<div class="slider-new__card">
+						<img src="img/new-4.png" alt="">
+						<p>Куртка кожаная Parajumpers</p>
+						<span>14 500 ₽</span>
+					</div>
+				</div>
+
+			</div>
+
+		</div>
+		<!-- /.slider-news -->
+
+	</div>
+
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+	<script src="js/main.js"></script>
+
 
 </body>
 
