--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 							<img src="img/heart.svg" alt="bookmarks">
 						</div>
 						<div class="header__cart">
+							<span class="counter">0</span>
 							<img src="img/supermarket.svg" alt="basket">
 						</div>
 						<button class="header-menu" type="button" id="navToggle">
@@ -84,7 +85,7 @@
 	</header>
 	<!-- /.header -->
 
-	<div class="container">
+	<main class="container">
 
 		<div class="slider-top">
 
@@ -554,7 +555,7 @@
 		</div>
 		<!-- /.slider-brand -->
 
-	</div>
+	</main>
 
 
 	<div class="descr">
@@ -667,13 +668,13 @@
 				</div>
 				<div class="footer__social">
 					<div class="footer__social-icon">
-						<img src="img/vk.png" alt="">
+						<a href="#"><img src="img/vk.png" alt=""></a>
 					</div>
 					<div class="footer__social-icon">
-						<img src="img/fb.png" alt="">
+						<a href="#"><img src="img/fb.png" alt=""></a>
 					</div>
 					<div class="footer__social-icon">
-						<img src="img/insta.png" alt="">
+						<a href="#"><img src="img/insta.png" alt=""></a>
 					</div>
 				</div>
 			</div>
