Added page for women

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Куртки</title>
+	<title>Главная</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,800&display=swap&subset=cyrillic"
 		rel="stylesheet">
@@ -71,7 +71,7 @@
 			</div>
 			<!-- /.header__wrap -->
 			<nav class="header-nav" id="nav">
-				<a href="#">ЖЕНЩИНАМ</a>
+				<a href="woman.html">ЖЕНЩИНАМ</a>
 				<a href="#">МУЖЧИНАМ</a>
 				<a href="#">НОВЫЕ КОЛЛЕКЦИИ</a>
 				<a href="#">РАСПРОДАЖА</a>
