Add pages aeronutica

--- a/aeronautica-brend.html
+++ b/aeronautica-brend.html
@@ -92,7 +92,7 @@
 			<div class="page-wrapper">
 				<aside class="filter-size">
 
-					<h1>Для женщин</h1>
+					<h1>Aeronautica militare</h1>
 
 					<div class="filter-size__wrap">
 						<div class="for-brand">
